--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 && tsc",
+    "preview": "vite preview",
+    "start": "vite --port 8080 --host"
   },
   "dependencies": {
     "react": "^19.1.0",
