--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,13 @@
     "start": "vite --port 8080 --host"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.83.0",
     "bootstrap": "5.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-error-boundary": "^6.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
