--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@tanstack/react-query": "^5.83.0",
     "bootstrap": "5.3",
+    "bootstrap-icons": "^1.13.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
     "react-hot-toast": "^2.5.2",
-    "react-router-dom": "^7.7.1"
+    "react-router-dom": "^7.7.1",
+    "sass": "^1.89.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
