--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.11.0",
     "bootstrap": "5.3",
     "bootstrap-icons": "^1.13.1",
     "react": "^19.1.0",
