--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,9 +1,31 @@
+annotated-types==0.7.0
+anyio==4.9.0
+click==8.2.1
 fastapi==0.115.12
 fastapi-cli==0.0.7
-python-dotenv==1.1.0
-pydantic==2.11.5
-pydantic_core==2.33.2
+h11==0.16.0
+httptools==0.6.4
+idna==3.10
+markdown-it-py==3.0.0
+mdurl==0.1.2
 psycopg==3.2.9
 psycopg-binary==3.2.9
 psycopg-pool==3.2.6
 psycopg2-binary==2.9.10
+pydantic==2.11.5
+pydantic_core==2.33.2
+Pygments==2.19.2
+python-dotenv==1.1.0
+PyYAML==6.0.2
+rich==14.1.0
+rich-toolkit==0.14.9
+shellingham==1.5.4
+sniffio==1.3.1
+starlette==0.46.2
+typer==0.16.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+uvicorn==0.35.0
+uvloop==0.21.0
+watchfiles==1.1.0
+websockets==15.0.1
